Harden and test live-view incremental checkpoints
Review follow-ups on the touched-key cadence seal. The optimization was
correct on every reachable path; this is hardening, coverage and
convention work on top of it.

A live-map lookup miss now fails loudly. The seal conflated a genuine
tombstone with a dirty key the live map does not hold, and both branches
deleted the key from the checkpoint root. Only the first is a removal;
the second can only mean the key-codec round trip broke, and treating it
as a removal silently drops live window state - a wrong result visible
only after a restart. The two branches now split, and the anchor side in
LiveViewWindow.freezeCheckpointEntries gets the same treatment.

The full-scan path also gets its tombstone skip back ahead of the
predecessor probe and the key image, which the incremental branch had
moved below both.

The incremental seal now checks the baseline generation. publishRepair,
publishTruncate and publishCompaction all publish a root that can become
the next cadence seal's predecessor, and none of them touched the
runtime's incremental baseline. That was safe only because each of those
paths happens to restore runtime state first. onCheckpointPersisted now
records the generation its publication produced, and the seal freezes
incrementally only when it is sealing on top of exactly that generation,
so the invariant holds at the seal rather than by distance.

SumOverUnboundedPartitionRowsFrameFunction.markPartitionAlive was a
byte-identical copy of the base method and is deleted. The dirty-tracking
opt-in contract - call the helper on every path or on none - is now
stated on markCheckpointPartitionDirty and on
WindowFunction.getCheckpointDirtyPartitionMap, where the seven remaining
near-copy overrides can find it.

Two allocations that only the full-scan path consumes no longer run on
the incremental one: LiveViewCheckpointAnchorRootBuilder's put-key set,
whose duplicate guard the partition-map writer already provides o